osha.theme Changelog
====================

1.5.31 (unreleased)
-------------------

- Fixed task #7854: default_error_message raised an error.


1.5.30 (2013-06-24)
-------------------

- remove the first paragraph added to each napo film, on the description
  pages #7467 [thomasw]
- #7379 #7602 #7379 Replace the server side truncation of the teaser
  text on the home page, also for the competitions view with
  JavaScript (jQuery.dotdotdot) [deroiste]
- #7634, #7508, #7488: Made News listing, Event/Seminar listsings and
  publications listings show untranslated documents as fallback. [regebro]
- don't call get_faqs in __init__ of OSHAHelpCenterView. Attempt
  to fix post-Hotfix SNAFU [pysailor]
- Add collective.portlet.twitter [jure, pysailor]

1.5.29 (2013-05-14)
-------------------

- #6724: Added blog view which displays blog entries in selected language
  with fallback to default language [jure]
- Changed logo for Croatia #7315 [thomasw]
- #6914 js for seminarportal [jure]
- add a rss view for blog, refs #6726 [jure]
- update default error message template, refs #5152 [jure]
- Create a view for displaying 'OSHA in the media' feed. Deprecate getFeed().
  Refs #7258 [jure]
- set #content width in multimedia image details view and increase height of
  album title in the album ov erview so that the titles and image captions are
  not cut, refs #7428. [jure]
- register vdex_as_json view for INavigationRoot instead of ISiteRoot to get
  the vocabularies in the sel ected language, refs #6710 [jure]


1.5.28 (2013-04-22)
-------------------

- Make enhanced oshnews portlet more robust [thomasw] 

1.5.27 (2013-04-18)
-------------------

- The oshnews portlet now has a correct language fallback to EN and
  excludes teasers #7106 [jure, thomasw]


1.5.26 (2013-04-17)
-------------------

- #6717 make it possible to scroll in overlay for vocabularies [thomasw]
- #5152: use the right i18n domains in default_error_message template [jure]