@@ -5,7 +5,7 @@
 
   <metal:javascriptslot fill-slot="javascript_head_slot">
     <script type="text/javascript"
-            src="++resource++osha.theme.behaviour/highlights-carousel.js"
+            src="++resource++osha.theme.behaviour/highlights-carousel.js?v=3"
             language="javascript">
     </script>
     <script type="text/javascript" language="javascript">
